--- a/Hobbies/ViewAndViewModels/SharedViews/ListModelTableViewCell.xib
+++ b/Hobbies/ViewAndViewModels/SharedViews/ListModelTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryTableViewCell" rowHeight="297" id="KGk-i7-Jjw" customClass="CategoryTableViewCell" customModule="Hobbies" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListModelTableViewCell" rowHeight="297" id="KGk-i7-Jjw" customClass="ListModelTableViewCell" customModule="Hobbies" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="297"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
