--- a/Hobbies/ViewAndViewModels/ListOfDetail/ListAndDetail.storyboard
+++ b/Hobbies/ViewAndViewModels/ListOfDetail/ListAndDetail.storyboard
@@ -34,69 +34,20 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="u2v-4Q-SSt" id="bXf-av-OfN"/>
-                        <segue destination="Ta7-fY-W26" kind="show" id="Z4V-uY-9aB"/>
+                        <segue destination="WhW-hd-wzx" kind="show" id="Z4V-uY-9aB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Vh-1H-THX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-178" y="-370"/>
         </scene>
-        <!--Detail View Controller-->
-        <scene sceneID="PjY-Kj-OJY">
+        <!--Detail-->
+        <scene sceneID="VPl-pf-7v6">
             <objects>
-                <viewController id="Ta7-fY-W26" customClass="DetailViewController" customModule="Hobbies" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="sD2-yr-JDE">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U4b-jT-VsZ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <connections>
-                                    <segue destination="AW9-9c-Ye5" kind="embed" id="2Eu-S0-hMQ"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="YM5-5n-7gY" firstAttribute="trailing" secondItem="U4b-jT-VsZ" secondAttribute="trailing" id="0kU-xW-zwH"/>
-                            <constraint firstItem="U4b-jT-VsZ" firstAttribute="leading" secondItem="YM5-5n-7gY" secondAttribute="leading" id="5ey-Iz-2so"/>
-                            <constraint firstItem="YM5-5n-7gY" firstAttribute="bottom" secondItem="U4b-jT-VsZ" secondAttribute="bottom" id="fxr-gK-Ssy"/>
-                            <constraint firstItem="U4b-jT-VsZ" firstAttribute="top" secondItem="YM5-5n-7gY" secondAttribute="top" id="gnK-9s-PaC"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="YM5-5n-7gY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="e2c-0V-mX0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Detail" id="WhW-hd-wzx" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cyp-sz-34S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="870" y="-370"/>
-        </scene>
-        <!--Detail Table View Controller-->
-        <scene sceneID="QYc-QN-Dhf">
-            <objects>
-                <tableViewController id="AW9-9c-Ye5" customClass="DetailTableViewController" customModule="Hobbies" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xch-XQ-pN7">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="QCF-bs-6Jy">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QCF-bs-6Jy" id="GAK-ij-pab">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="AW9-9c-Ye5" id="Y5J-m3-GUj"/>
-                            <outlet property="delegate" destination="AW9-9c-Ye5" id="SQI-hO-5ot"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fNC-q5-uba" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1765" y="-370"/>
         </scene>
     </scenes>
 </document>
